load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library"
)

load(
    "//src/libraries/System.Private.CoreLib/src:files.bzl",
    "coreclr_files"
)

nowarn = [ "CS8500", "CS8969" ]

common_imports = [
    "//src/libraries/Common:src/System/Collections/Generic/ArrayBuilder.cs",
    "//src/libraries/Common:src/System/Experimentals.cs",
    "//src/libraries/Common:src/Interop/Interop.Calendar.cs",
    "//src/libraries/Common:src/Interop/Interop.Casing.cs",
    "//src/libraries/Common:src/Interop/Interop.Collation.cs",
    "//src/libraries/Common:src/Interop/Interop.ICU.cs",
    "//src/libraries/Common:src/Interop/Interop.Idna.cs",
    "//src/libraries/Common:src/Interop/Interop.Locale.cs",
    "//src/libraries/Common:src/Interop/Interop.Normalization.cs",
    "//src/libraries/Common:src/Interop/Interop.ResultCode.cs",
    "//src/libraries/Common:src/Interop/Interop.TimeZoneDisplayNameType.cs",
    "//src/libraries/Common:src/Interop/Interop.TimeZoneInfo.cs",
    "//src/libraries/Common:src/Interop/Interop.Utils.cs",
    "//src/libraries/Common:src/Interop/Windows/Interop.Errors.cs",
    "//src/libraries/Common:src/Interop/Windows/Interop.BOOL.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.Globalization.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.ResolveLocaleName.cs",
    "//src/libraries/Common:src/Interop/Windows/Normaliz/Interop.Idna.cs",
    "//src/libraries/Common:src/Interop/Windows/Normaliz/Interop.Normalization.cs",
    "//src/libraries/Common:src/DisableRuntimeMarshalling.cs",
    "//src/libraries/Common:src/SkipLocalsInit.cs",
    "//src/libraries/Common:src/System/TimeProvider.cs",
    "//src/libraries/Common:src/System/LocalAppContextSwitches.Common.cs",
    "//src/libraries/Common:src/System/HexConverter.cs",
    "//src/libraries/Common:src/System/HResults.cs",
    "//src/libraries/Common:src/System/NotImplemented.cs",
    "//src/libraries/Common:src/System/Number.Formatting.Common.cs",
    "//src/libraries/Common:src/System/Number.NumberBuffer.cs",
    "//src/libraries/Common:src/System/Number.Parsing.Common.cs",
    "//src/libraries/Common:src/System/Numerics/Crc32ReflectedTable.cs",
    "//src/libraries/Common:src/System/Obsoletions.cs",
    "//src/libraries/Common:src/System/Sha1ForNonSecretPurposes.cs",
    "//src/libraries/Common:src/System/SR.cs",
    "//src/libraries/Common:src/System/Collections/Concurrent/IProducerConsumerQueue.cs",
    "//src/libraries/Common:src/System/Collections/Concurrent/MultiProducerMultiConsumerQueue.cs",
    "//src/libraries/Common:src/System/Collections/Concurrent/SingleProducerSingleConsumerQueue.cs",
    "//src/libraries/Common:src/System/Collections/Generic/EnumerableHelpers.cs",
    "//src/libraries/Common:src/System/Collections/Generic/BitHelper.cs",
    "//src/libraries/Common:src/System/IO/PathInternal.cs",
    "//src/libraries/Common:src/System/IO/PathInternal.CaseSensitivity.cs",
    "//src/libraries/Common:src/System/Reflection/AssemblyNameParser.cs",
    "//src/libraries/Common:src/System/Reflection/AssemblyNameFormatter.cs",
    "//src/libraries/Common:src/System/Reflection/Metadata/TypeNameHelpers.cs",
    "//src/libraries/Common:src/System/Runtime/Versioning/NonVersionableAttribute.cs",
    "//src/libraries/Common:src/System/Text/StringBuilderCache.cs",
    "//src/libraries/Common:src/System/Text/ValueStringBuilder.cs",
    "//src/libraries/Common:src/System/Text/ValueStringBuilder.AppendSpanFormattable.cs",
    "//src/libraries/Common:src/System/Threading/ITimer.cs",
    "//src/libraries/Common:src/System/Threading/OpenExistingResult.cs",
    "//src/libraries/Common:src/System/Threading/Tasks/TaskToAsyncResult.cs",
    "//src/libraries/Common:src/Interop/Interop.HostPolicy.cs",
    "//src/libraries/Common:src/Interop/Windows/Advapi32/Interop.ActivityControl.cs",
    "//src/libraries/Common:src/Interop/Windows/Advapi32/Interop.EtwEnableCallback.cs",
    "//src/libraries/Common:src/Interop/Windows/Advapi32/Interop.EVENT_INFO_CLASS.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.CloseHandle.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.Constants.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.EventWaitHandle.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.GetEnvironmentVariable.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.GetEnvironmentStrings.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.FreeEnvironmentStrings.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.FormatMessage.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.Mutex.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.Semaphore.cs",
    "//src/libraries/Common:src/Interop/Windows/Kernel32/Interop.SetEnvironmentVariable.cs",
    "//src/libraries/Common:src/System/IO/Win32Marshal.cs",
    "//src/libraries/Common:src/System/Memory/FixedBufferExtensions.cs",
    "//src/libraries/Common:src/Interop/Unix/Interop.Errors.cs",
    "//src/libraries/Common:src/Interop/Unix/Interop.IOErrors.cs",
    "//src/libraries/Common:src/Interop/Unix/Interop.Libraries.cs",
    "//src/libraries/Common:src/Interop/Unix/Interop.DefaultPathBufferSize.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Access.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ChDir.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ChMod.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.FChMod.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Close.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.CopyFile.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.DynamicLoad.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ErrNo.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.UnixFileSystemTypes.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.FLock.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.FSync.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.FTruncate.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetCpuUtilization.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetCwd.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetEnv.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetEnviron.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetHostName.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetOSArchitecture.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetProcessPath.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetRandomBytes.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetSystemTimeAsTicks.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetTimestamp.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetUnixVersion.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetUnixRelease.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.IOVector.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.LChflags.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Link.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.LockFileRegion.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Log.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.LowLevelMonitor.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.LSeek.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.MemAlloc.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.MkDir.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.MkdTemp.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.MksTemps.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.MountPoints.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Open.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.OpenFlags.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.PathConf.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.PosixFAdvise.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.FAllocate.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.PRead.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.PReadV.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.PWrite.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.PWriteV.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Read.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ReadDir.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ReadLink.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Rename.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.RmDir.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SchedGetCpu.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Stat.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Stat.Span.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SymLink.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SysConf.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SysLog.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Threading.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Unlink.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.UTimensat.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Write.cs",
    "//src/libraries/Common:src/System/Text/ValueUtf8Converter.cs",
    "//src/libraries/Common:src/System/IO/PathInternal.Unix.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetEUid.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.IsMemberOfGroup.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetPwUid.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetPid.cs",
    "//src/libraries/Common:src/System/IO/StringParser.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.InitializeTerminalAndSignalHandling.cs",
    "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.PosixSignal.cs",
    "//src/libraries/Common:src/Interop/OSX/System.Native/Interop.SearchPath.cs",
]

csharp_library(
    name = "impl_System.Private.CoreLib",
    analyzers = [
        "//src/libraries/System.Runtime.InteropServices:LibraryImportGenerator",
        "//src/libraries/System.Runtime.InteropServices:Microsoft.Interop.SourceGeneration",
    ],
    srcs = [
        "src/Internal/Runtime/CompilerHelpers/ThrowHelpers.cs",
        "src/Internal/Runtime/InteropServices/ComActivationContextInternal.cs",
        "src/Internal/Runtime/InteropServices/ComponentActivator.CoreCLR.cs",
        "src/System/__Canon.cs",
        "src/System/ArgIterator.cs",
        "src/System/Array.CoreCLR.cs",
        "src/System/Attribute.CoreCLR.cs",
        "src/System/BadImageFormatException.CoreCLR.cs",
        "src/System/Buffer.CoreCLR.cs",
        "src/System/CLRConfig.cs",
        "src/System/Collections/EmptyReadOnlyDictionaryInternal.cs",
        "src/System/Collections/Generic/ArraySortHelper.CoreCLR.cs",
        "src/System/Collections/Generic/Comparer.CoreCLR.cs",
        "src/System/Collections/Generic/ComparerHelpers.cs",
        "src/System/Collections/Generic/EqualityComparer.CoreCLR.cs",
        "src/System/ComAwareWeakReference.CoreCLR.cs",
        "src/System/Currency.cs",
        "src/System/Delegate.CoreCLR.cs",
        "src/System/Diagnostics/Debugger.cs",
        "src/System/Diagnostics/EditAndContinueHelper.cs",
        "src/System/Diagnostics/ICustomDebuggerNotification.cs",
        "src/System/Diagnostics/StackFrame.CoreCLR.cs",
        "src/System/Diagnostics/StackFrameHelper.cs",
        "src/System/Diagnostics/StackTrace.CoreCLR.cs",
        "src/System/Enum.CoreCLR.cs",
        "src/System/Environment.CoreCLR.cs",
        "src/System/Exception.CoreCLR.cs",
        "src/System/GC.CoreCLR.cs",
        "src/System/IO/FileLoadException.CoreCLR.cs",
        "src/System/IO/FileNotFoundException.CoreCLR.cs",
        "src/System/IO/Stream.CoreCLR.cs",
        "src/System/Math.CoreCLR.cs",
        "src/System/MathF.CoreCLR.cs",
        "src/System/MulticastDelegate.CoreCLR.cs",
        "src/System/Object.CoreCLR.cs",
        "src/System/Reflection/Assembly.CoreCLR.cs",
        "src/System/Reflection/AssemblyName.CoreCLR.cs",
        "src/System/Reflection/Associates.cs",
        "src/System/Reflection/ConstructorInfo.CoreCLR.cs",
        "src/System/Reflection/ConstructorInvoker.CoreCLR.cs",
        "src/System/Reflection/Emit/CustomAttributeBuilder.cs",
        "src/System/Reflection/Emit/DynamicILGenerator.cs",
        "src/System/Reflection/Emit/DynamicMethod.CoreCLR.cs",
        "src/System/Reflection/Emit/RuntimeAssemblyBuilder.cs",
        "src/System/Reflection/Emit/RuntimeConstructorBuilder.cs",
        "src/System/Reflection/Emit/RuntimeEnumBuilder.cs",
        "src/System/Reflection/Emit/RuntimeEventBuilder.cs",
        "src/System/Reflection/Emit/RuntimeFieldBuilder.cs",
        "src/System/Reflection/Emit/RuntimeGenericTypeParameterBuilder.cs",
        "src/System/Reflection/Emit/RuntimeILGenerator.cs",
        "src/System/Reflection/Emit/RuntimeLocalBuilder.cs",
        "src/System/Reflection/Emit/RuntimeMethodBuilder.cs",
        "src/System/Reflection/Emit/RuntimeModuleBuilder.cs",
        "src/System/Reflection/Emit/RuntimeParameterBuilder.cs",
        "src/System/Reflection/Emit/RuntimePropertyBuilder.cs",
        "src/System/Reflection/Emit/RuntimeTypeBuilder.cs",
        "src/System/Reflection/Emit/SignatureHelper.cs",
        "src/System/Reflection/Emit/SymbolMethod.cs",
        "src/System/Reflection/FieldInfo.CoreCLR.cs",
        "src/System/Reflection/LoaderAllocator.cs",
        "src/System/Reflection/MdConstant.cs",
        "src/System/Reflection/MdFieldInfo.cs",
        "src/System/Reflection/MdImport.cs",
        "src/System/Reflection/MemberInfo.Internal.cs",
        "src/System/Reflection/Metadata/AssemblyExtensions.cs",
        "src/System/Reflection/Metadata/MetadataUpdater.cs",
        "src/System/Reflection/MethodBase.CoreCLR.cs",
        "src/System/Reflection/MethodBaseInvoker.CoreCLR.cs",
        "src/System/Reflection/MethodInvoker.CoreCLR.cs",
        "src/System/Reflection/ModifiedType.CoreCLR.cs",
        "src/System/Reflection/RtFieldInfo.cs",
        "src/System/Reflection/RuntimeAssembly.cs",
        "src/System/Reflection/RuntimeConstructorInfo.CoreCLR.cs",
        "src/System/Reflection/RuntimeCustomAttributeData.cs",
        "src/System/Reflection/RuntimeEventInfo.cs",
        "src/System/Reflection/RuntimeExceptionHandlingClause.cs",
        "src/System/Reflection/RuntimeFieldInfo.cs",
        "src/System/Reflection/RuntimeLocalVariableInfo.cs",
        "src/System/Reflection/RuntimeMethodBody.cs",
        "src/System/Reflection/RuntimeMethodInfo.CoreCLR.cs",
        "src/System/Reflection/RuntimeModule.cs",
        "src/System/Reflection/RuntimeParameterInfo.cs",
        "src/System/Reflection/RuntimePropertyInfo.cs",
        "src/System/Reflection/TypeNameResolver.CoreCLR.cs",
        "src/System/Reflection/Metadata/RuntimeTypeMetadataUpdateHandler.cs",
        "src/System/Runtime/CompilerServices/CastHelpers.cs",
        "src/System/Runtime/CompilerServices/RuntimeHelpers.CoreCLR.cs",
        "src/System/Runtime/ControlledExecution.CoreCLR.cs",
        "src/System/Runtime/DependentHandle.cs",

        # Native AOT imports
        "//src/coreclr/nativeaot:Common/src/System/Runtime/RhFailFastReason.cs",
        "//src/coreclr/nativeaot:Runtime.Base/src/System/Runtime/ExceptionHandling.cs",
        "//src/coreclr/nativeaot:Runtime.Base/src/System/Runtime/ExceptionIDs.cs",
        "//src/coreclr/nativeaot:Runtime.Base/src/System/Runtime/StackFrameIterator.cs",

        "src/System/Runtime/ExceptionServices/AsmOffsets.cs",
        "src/System/Runtime/ExceptionServices/InternalCalls.cs",
        "src/System/Runtime/GCSettings.CoreCLR.cs",
        "src/System/Runtime/JitInfo.CoreCLR.cs",
        "src/System/Runtime/InteropServices/DynamicInterfaceCastableHelpers.cs",
        "src/System/Runtime/InteropServices/GCHandle.CoreCLR.cs",
        "src/System/Runtime/InteropServices/Marshal.CoreCLR.cs",
        "src/System/Runtime/InteropServices/MemoryMarshal.CoreCLR.cs",
        "src/System/Runtime/InteropServices/NativeLibrary.CoreCLR.cs",
        "src/System/Runtime/Intrinsics/X86/X86Base.CoreCLR.cs",
        "src/System/Runtime/Loader/AssemblyLoadContext.CoreCLR.cs",
        "src/System/RuntimeArgumentHandle.cs",
        "src/System/RuntimeHandles.cs",
        "src/System/RuntimeType.ActivatorCache.cs",
        "src/System/RuntimeType.CoreCLR.cs",
        "src/System/StartupHookProvider.CoreCLR.cs",
        "src/System/String.CoreCLR.cs",
        "src/System/StubHelpers.cs",
        "src/System/Text/StringBuilder.CoreCLR.cs",
        "src/System/Threading/Interlocked.CoreCLR.cs",
        "src/System/Threading/Monitor.CoreCLR.cs",
        "src/System/Threading/SynchronizationContext.CoreCLR.cs",
        "src/System/Threading/Thread.CoreCLR.cs",
        "src/System/Threading/ThreadPool.CoreCLR.cs",
        "src/System/Threading/WaitHandle.CoreCLR.cs",
        "src/System/Type.CoreCLR.cs",
        "src/System/TypedReference.CoreCLR.cs",
        "src/System/TypeLoadException.CoreCLR.cs",
        "src/System/ValueType.cs",
        "src/System/RuntimeType.BoxCache.cs",
        "src/System/RuntimeType.CreateUninitializedCache.CoreCLR.cs",
        "src/System/RuntimeType.GenericCache.cs",
        "src/System/Runtime/InteropServices/ComWrappers.cs",
        "src/Internal/Runtime/InteropServices/ComActivator.PlatformNotSupported.cs",
        "src/Internal/Runtime/InteropServices/InMemoryAssemblyLoader.PlatformNotSupported.cs",
        "src/Interop/Unix/Interop.Libraries.cs",
        "src/System/Threading/LowLevelLifoSemaphore.Unix.cs",
        "src/System/Threading/Mutex.CoreCLR.Unix.cs",

        # SRM
        "//src/libraries/System.Reflection.Metadata:src/System/Reflection/Metadata/AssemblyNameInfo.cs",
        "//src/libraries/System.Reflection.Metadata:src/System/Reflection/Metadata/TypeName.cs",
        "//src/libraries/System.Reflection.Metadata:src/System/Reflection/Metadata/TypeNameParser.cs",
        "//src/libraries/System.Reflection.Metadata:src/System/Reflection/Metadata/TypeNameParserHelpers.cs",

        # Prebuilt copy of event source data
        "src/NativeRuntimeEventSource.Generated.cs",
        # Prebuilt copy of resource strings
        "src/System.SR.cs",

    ] + common_imports + [ "//src/libraries/System.Private.CoreLib/src:%s" % x for x in coreclr_files ],
    nullable = "enable",
    allow_unsafe_blocks = True,
    target_frameworks = [ "net9.0" ],
    disable_implicit_framework_refs = True,
    cls_compliant = False,
    compiler_options = [ "/runtimemetadataversion:v4.0.30319" ],
    defines = [ "SYSTEM_PRIVATE_CORELIB", "CORECLR" ] + select({
            "@platforms//cpu:x86_64": [ "TARGET_AMD64", "TARGET_64BIT" ],
            "@platforms//cpu:aarch64": [ "TARGET_ARM64", "TARGET_64BIT" ],
        }) + select({
            "@platforms//os:windows": [ "TARGET_WINDOWS" ],
            "@platforms//os:linux": [ "TARGET_LINUX" ],
            "@platforms//os:macos": [ "TARGET_OSX" ],
        }),
    nowarn = nowarn
)