
exports_files(glob(["src/**/*.cs"]))

#    "src/System/Collections/Generic/ArrayBuilder.cs",
#    "src/System/Experimentals.cs",
#    "src/System/Runtime/Versioning/NonVersionableAttribute.cs",
#    "src/System/Obsoletions.cs",
#    "src/Roslyn/DiagnosticDescriptorHelper.cs",
#    "src/Roslyn/GetBestTypeByMetadataName.cs",
#    "src/Roslyn/Hash.cs",
#    "src/System/SR.cs",
#    "src/System/Number.NumberBuffer.cs",
#])