load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

netcoreapp_ref_assembly(
    name = "ref_Microsoft.Win32.Registry",
    srcs = [
        "ref/Microsoft.Win32.Registry.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
        "//src/libraries/System.Security.AccessControl:ref_System.Security.AccessControl",
        "//src/libraries/System.Security.Principal.Windows:ref_System.Security.Principal.Windows",
    ],
)
