load("//src/libraries:defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_assembly")

exports_files([
    "ref/System.Collections.Concurrent.cs",
])

netcoreapp_ref_assembly(
    name = "ref_System.Collections.Concurrent",
    srcs = [
        "ref/System.Collections.Concurrent.cs",
    ],
    deps = [
        "//src/libraries:ref_System.Runtime",
    ],
)

netcoreapp_impl_assembly(
    name = "impl_System.Collections.Concurrent",
    srcs = [
        "src/System/ThrowHelper.cs",
        "src/System/Collections/Concurrent/BlockingCollection.cs",
        "src/System/Collections/Concurrent/CDSCollectionETWBCLProvider.cs",
        "src/System/Collections/Concurrent/ConcurrentBag.cs",
        "src/System/Collections/Concurrent/ConcurrentDictionary.cs",
        "src/System/Collections/Concurrent/ConcurrentStack.cs",
        "src/System/Collections/Concurrent/OrderablePartitioner.cs",
        "src/System/Collections/Concurrent/Partitioner.cs",
        "src/System/Collections/Concurrent/PartitionerStatic.cs",

        "//src/libraries/System.Private.CoreLib:src/System/Collections/HashHelpers.cs",
        "//src/libraries/System.Private.CoreLib:src/System/Collections/Concurrent/IProducerConsumerCollectionDebugView.cs",
        "//src/libraries/System.Private.CoreLib:src/System/Collections/Generic/DebugViewDictionaryItem.cs",
    ],
    deps = [
        "//src/libraries/System.Collections:impl_System.Collections",
        "//src/libraries:ref_System.Private.CoreLib",
        #"//src/libraries/System.Diagnostics.Tracing:impl_System.Diagnostics.Tracing",
        "//src/libraries/System.Threading:impl_System.Threading",
    ],
    resx_file = "src/Resources/Strings.resx",
)